@@ -1,6 +1,66 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <includes>
 
+    <include name="OSD_LeftSide"><left>view_pad</left></include>
+    <include name="OSD_RightSide"><right>view_pad</right></include>
+
+    <include name="OSD_Music_Info_Image_Circle">
+        <param name="artwork" default="Player.Art(albumartist.thumb)" />
+        <param name="fallback" default="DefaultArtist.png" />
+        <param name="side" default="OSD_RightSide" />
+        <definition>
+            <control type="group">
+                <include>$PARAM[side]</include>
+                <bottom>view_pad</bottom>
+                <width>218</width>
+                <height>218</height>
+                <control type="image">
+                    <right>-15</right>
+                    <bottom>-15</bottom>
+                    <left>-15</left>
+                    <top>-15</top>
+                    <bordersize>15</bordersize>
+                    <bordertexture colordiffuse="Shadow">diffuse/circle-shadow.png</bordertexture>
+                    <texture diffuse="diffuse/circle.png" colordiffuse="PosterBack">common/geometric.png</texture>
+                </control>
+                <control type="image">
+                    <right>-15</right>
+                    <bottom>-15</bottom>
+                    <left>-15</left>
+                    <top>-15</top>
+                    <bordersize>45</bordersize>
+                    <texture>$PARAM[fallback]</texture>
+                    <visible>String.IsEmpty($PARAM[artwork])</visible>
+                </control>
+                <control type="image">
+                    <right>-15</right>
+                    <bottom>-15</bottom>
+                    <left>-15</left>
+                    <top>-15</top>
+                    <bordersize>15</bordersize>
+                    <texture diffuse="diffuse/circle.png">$INFO[$PARAM[artwork]]</texture>
+                    <visible>!String.IsEmpty($PARAM[artwork])</visible>
+                </control>
+            </control>
+        </definition>
+    </include>
+
+    <include name="OSD_Music_Info_Image_Square">
+        <param name="side" default="OSD_LeftSide" />
+        <definition>
+            <control type="group">
+                <bottom>view_pad</bottom>
+                <include>$PARAM[side]</include>
+                <width>218</width>
+                <height>218</height>
+                <control type="image">
+                    <aspectratio scalediffuse="false">scale</aspectratio>
+                    <include condition="!Skin.HasSetting(DisableShadows)">Defs_Shadow_24</include>
+                    <texture diffuse="diffuse/square-musicosd.png">$INFO[$PARAM[artwork]]</texture>
+                </control>
+            </control>
+        </definition>
+    </include>
     <include name="OSD_Music_Info">
         <param name="player" default="MusicPlayer" />
         <param name="rating" default="MusicPlayer.UserRating" />
@@ -20,138 +80,111 @@
                     <animation effect="fade" start="0" end="100" time="300">VisibleChange</animation>
                     <include>Animation_FadeIn</include>
                     <include>Animation_FadeOut</include>
-                    <control type="group">
-                        <bottom>view_pad</bottom>
-                        <left>view_pad</left>
-                        <width>218</width>
-                        <height>218</height>
-                        <control type="image">
-                            <aspectratio scalediffuse="false">scale</aspectratio>
-                            <include condition="!Skin.HasSetting(DisableShadows)">Defs_Shadow_24</include>
-                            <texture diffuse="diffuse/square-musicosd.png">$INFO[$PARAM[artwork]]</texture>
-                        </control>
-                    </control>
-                    <control type="group">
-                        <right>view_pad</right>
-                        <bottom>view_pad</bottom>
-                        <control type="image">
-                            <right>-15</right>
-                            <bottom>-15</bottom>
-                            <width>248</width>
-                            <height>248</height>
-                            <bordersize>15</bordersize>
-                            <bordertexture colordiffuse="Shadow">diffuse/circle-shadow.png</bordertexture>
-                            <texture diffuse="diffuse/circle.png" colordiffuse="PosterBack">common/geometric.png</texture>
-                        </control>
-                        <control type="image">
-                            <right>-15</right>
-                            <bottom>-15</bottom>
-                            <width>248</width>
-                            <height>248</height>
-                            <bordersize>45</bordersize>
-                            <texture>DefaultArtist.png</texture>
-                            <visible>String.IsEmpty(Player.Art(albumartist.thumb))</visible>
-                        </control>
-                        <control type="image">
-                            <right>-15</right>
-                            <bottom>-15</bottom>
-                            <width>248</width>
-                            <height>248</height>
-                            <bordersize>15</bordersize>
-                            <texture diffuse="diffuse/circle.png">$INFO[Player.Art(albumartist.thumb)]</texture>
-                            <visible>!String.IsEmpty(Player.Art(albumartist.thumb))</visible>
-                        </control>
-                    </control>
+                    
+                    <!-- Album Cover -->
+                    <include content="OSD_Music_Info_Image_Square">
+                        <param name="artwork" value="$PARAM[artwork]" />
+                    </include>
 
-                    <control type="image">
-                        <right>340</right>
-                        <bottom>172</bottom>
-                        <width>340</width>
-                        <height>126</height>
-                        <aspectratio align="right" aligny="bottom">keep</aspectratio>
-                        <texture>$INFO[Player.Art(albumartist.clearlogo)]</texture>
-                    </control>
-
-                    <control type="progress" id="401">
-                        <left>340</left>
-                        <right>340</right>
-                        <bottom>140</bottom>
-                        <height>12</height>
-                        <info>Player.Progress</info>
-                        <visible>Player.HasMedia</visible>
-                    </control>
+                    <!-- Artist Image -->
+                    <include condition="!Skin.HasSetting(MusicOSDSquareArtist)">OSD_Music_Info_Image_Circle</include>
+                    <include  condition="Skin.HasSetting(MusicOSDSquareArtist)" content="OSD_Music_Info_Image_Square">
+                        <param name="artwork" value="Player.Art(albumartist.thumb)" />
+                        <param name="side" value="OSD_RightSide" />
+                    </include>
 
                     <control type="group">
-                        <centerbottom>95</centerbottom>
-                        <height>20</height>
-                        <left>340</left>
                         <right>340</right>
-                        <control type="label">
-                            <textcolor>panel_fg_100</textcolor>
-                            <include>OSD_Menubar_Items</include>
-                            <label>$INFO[Player.Time]</label>
+                        <control type="image">
+                            <right>0</right>
+                            <bottom>172</bottom>
+                            <width>340</width>
+                            <height>126</height>
+                            <aspectratio align="right" aligny="bottom">keep</aspectratio>
+                            <texture>$INFO[Player.Art(albumartist.clearlogo)]</texture>
                         </control>
-                        <control type="label">
-                            <align>right</align>
-                            <textcolor>panel_fg_100</textcolor>
-                            <include>OSD_Menubar_Items</include>
-                            <label>$INFO[Player.Duration]</label>
+
+                        <control type="progress" id="401">
+                            <left>340</left>
+                            <right>0</right>
+                            <bottom>140</bottom>
+                            <height>12</height>
+                            <info>Player.Progress</info>
+                            <visible>Player.HasMedia</visible>
                         </control>
-                        <control type="grouplist">
-                            <top>-10</top>
-                            <bottom>-10</bottom>
-                            <align>center</align>
-                            <orientation>horizontal</orientation>
-                            <usecontrolcoords>true</usecontrolcoords>
-                            <itemgap>20</itemgap>
-                            <include>Animation_FadeIn</include>
-                            <include>Animation_FadeOut</include>
-                            <visible>!Window.IsVisible(musicosd) + !Window.IsVisible(videoosd)</visible>
+
+                        <control type="group">
+                            <centerbottom>95</centerbottom>
+                            <height>20</height>
+                            <left>340</left>
+                            <right>0</right>
                             <control type="label">
-                                <width>auto</width>
-                                <textcolor>panel_fg_70</textcolor>
+                                <textcolor>panel_fg_100</textcolor>
                                 <include>OSD_Menubar_Items</include>
-                                <label>$INFO[MusicPlayer.BitRate,, [COLOR=panel_fg_30]kbps [/COLOR]]$INFO[MusicPlayer.BitsPerSample,[COLOR=panel_fg_30]  |  [/COLOR], [COLOR=panel_fg_30]bps [/COLOR]]$INFO[MusicPlayer.SampleRate,[COLOR=panel_fg_30]  |  [/COLOR], [COLOR=panel_fg_30]khz[/COLOR]]</label>
+                                <label>$INFO[Player.Time]</label>
                             </control>
-                            <control type="image" id="9968">
-                                <width>84</width>
-                                <top>-4</top>
-                                <height>50</height>
-                                <centertop>50%</centertop>
-                                <texture colordiffuse="panel_fg_70">$INFO[MusicPlayer.Codec,flags/monochrome/audio/,.png]</texture>
-                                <aspectratio align="left">keep</aspectratio>
-                                <visible allowhiddenfocus="true">!String.IsEmpty(Control.GetLabel(9968))</visible>
-                            </control>
-                        </control>
-                    </control>
-
-                    <control type="grouplist">
-                        <bottom>view_pad</bottom>
-                        <left>340</left>
-                        <right>680</right>
-                        <height>234</height>
-                        <orientation>vertical</orientation>
-                        <usecontrolcoords>true</usecontrolcoords>
-                        <itemgap>0</itemgap>
-                        <control type="label">
-                            <label>$INFO[Player.Title]</label>
-                            <height>90</height>
-                            <aligny>top</aligny>
-                            <textcolor>panel_fg_100</textcolor>
-                            <font>font_title_large</font>
-                        </control>
-                        <control type="grouplist">
-                            <height>40</height>
-                            <itemgap>20</itemgap>
-                            <orientation>horizontal</orientation>
-                            <usecontrolcoords>true</usecontrolcoords>
                             <control type="label">
-                                <label>$INFO[$PARAM[player].AlbumArtist,[COLOR=panel_fg_100],[/COLOR]]$INFO[$PARAM[player].Album,  |  [COLOR=panel_fg_100],[/COLOR]]$INFO[$PARAM[player].Year,  |  [COLOR=panel_fg_100],[/COLOR]]</label>
-                                <height>40</height>
+                                <align>right</align>
+                                <textcolor>panel_fg_100</textcolor>
+                                <include>OSD_Menubar_Items</include>
+                                <label>$INFO[Player.Duration]</label>
+                            </control>
+                            <control type="grouplist">
+                                <top>-10</top>
+                                <bottom>-10</bottom>
+                                <align>center</align>
+                                <orientation>horizontal</orientation>
+                                <usecontrolcoords>true</usecontrolcoords>
+                                <itemgap>20</itemgap>
+                                <include>Animation_FadeIn</include>
+                                <include>Animation_FadeOut</include>
+                                <visible>!Window.IsVisible(musicosd) + !Window.IsVisible(videoosd)</visible>
+                                <control type="label">
+                                    <width>auto</width>
+                                    <textcolor>panel_fg_70</textcolor>
+                                    <include>OSD_Menubar_Items</include>
+                                    <label>$INFO[MusicPlayer.BitRate,, [COLOR=panel_fg_30]kbps [/COLOR]]$INFO[MusicPlayer.BitsPerSample,[COLOR=panel_fg_30]  |  [/COLOR], [COLOR=panel_fg_30]bps [/COLOR]]$INFO[MusicPlayer.SampleRate,[COLOR=panel_fg_30]  |  [/COLOR], [COLOR=panel_fg_30]khz[/COLOR]]</label>
+                                </control>
+                                <control type="image" id="9968">
+                                    <width>84</width>
+                                    <top>-4</top>
+                                    <height>50</height>
+                                    <centertop>50%</centertop>
+                                    <texture colordiffuse="panel_fg_70">$INFO[MusicPlayer.Codec,flags/monochrome/audio/,.png]</texture>
+                                    <aspectratio align="left">keep</aspectratio>
+                                    <visible allowhiddenfocus="true">!String.IsEmpty(Control.GetLabel(9968))</visible>
+                                </control>
+                            </control>
+                        </control>
+
+                        <control type="grouplist">
+                            <bottom>view_pad</bottom>
+                            <left>340</left>
+                            <right>340</right>
+                            <height>234</height>
+                            <orientation>vertical</orientation>
+                            <usecontrolcoords>true</usecontrolcoords>
+                            <itemgap>0</itemgap>
+                            <control type="label">
+                                <label>$INFO[Player.Title]</label>
+                                <height>90</height>
                                 <aligny>top</aligny>
-                                <width>auto</width>
-                                <textcolor>$VAR[ColorHighlight]</textcolor>
-                                <font>font_small</font>
+                                <textcolor>panel_fg_100</textcolor>
+                                <font>font_title_large</font>
+                            </control>
+                            <control type="grouplist">
+                                <height>40</height>
+                                <itemgap>20</itemgap>
+                                <orientation>horizontal</orientation>
+                                <usecontrolcoords>true</usecontrolcoords>
+                                <control type="label">
+                                    <label>$INFO[$PARAM[player].AlbumArtist,[COLOR=panel_fg_100],[/COLOR]]$INFO[$PARAM[player].Album,  |  [COLOR=panel_fg_100],[/COLOR]]$INFO[$PARAM[player].Year,  |  [COLOR=panel_fg_100],[/COLOR]]</label>
+                                    <height>40</height>
+                                    <aligny>top</aligny>
+                                    <width>auto</width>
+                                    <textcolor>$VAR[ColorHighlight]</textcolor>
+                                    <font>font_small</font>
+                                </control>
                             </control>
                         </control>
                     </control>
