@@ -2,6 +2,7 @@
 Add hint arrows to extendedinfo dialogs
 Add option to change autoscroll and timerperimage
 Bump up size of topbar icons slightly (60px -> 70px)
+Option for square artist image on music osd
 
 0.9.22
 Add hint arrows to info dialogs
